[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/CharacterCreation.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="CharacterCreation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 519.0
tab_align = 0

[node name="PlayerStats" type="VBoxContainer" parent="PanelContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HeaderInfo" type="HBoxContainer" parent="PanelContainer/TabContainer/PlayerStats"]
margin_right = 478.0
margin_bottom = 167.0
rect_min_size = Vector2( 0, 100 )

[node name="SelectedClassPicture" type="TextureRect" parent="PanelContainer/TabContainer/PlayerStats/HeaderInfo"]
margin_right = 150.0
margin_bottom = 167.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 2 )
expand = true

[node name="TutorialLabel" type="Label" parent="PanelContainer/TabContainer/PlayerStats/HeaderInfo"]
margin_left = 154.0
margin_right = 478.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Allocate points into the following stats:

Strength: Determines how quickly you work at machines and how much you can carry

Perception: Determines your ability to hack terminals, aim a weapon and control recoil

Toughness: Reduces the amount of damage you take from all sources"
align = 1
valign = 1
autowrap = true

[node name="RemainingPointsLabel" type="Label" parent="PanelContainer/TabContainer/PlayerStats"]
margin_top = 171.0
margin_right = 478.0
margin_bottom = 185.0
size_flags_vertical = 7
text = "Points Remaining: 5"
align = 1
valign = 1

[node name="StrengthStat" type="PanelContainer" parent="PanelContainer/TabContainer/PlayerStats"]
margin_top = 189.0
margin_right = 478.0
margin_bottom = 264.0
rect_min_size = Vector2( 0, 75 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/TabContainer/PlayerStats/StrengthStat"]
margin_left = 7.0
margin_top = 7.0
margin_right = 471.0
margin_bottom = 68.0

[node name="NameLabel" type="Label" parent="PanelContainer/TabContainer/PlayerStats/StrengthStat/VBoxContainer"]
margin_right = 464.0
margin_bottom = 14.0
text = "STRENGTH"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/TabContainer/PlayerStats/StrengthStat/VBoxContainer"]
margin_top = 18.0
margin_right = 464.0
margin_bottom = 61.0
size_flags_vertical = 3

[node name="MinusButton" type="Button" parent="PanelContainer/TabContainer/PlayerStats/StrengthStat/VBoxContainer/HBoxContainer"]
margin_right = 152.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "-"

[node name="CurrAmountLabel" type="Label" parent="PanelContainer/TabContainer/PlayerStats/StrengthStat/VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_top = 14.0
margin_right = 308.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "1"
align = 1
valign = 1

[node name="AddButton" type="Button" parent="PanelContainer/TabContainer/PlayerStats/StrengthStat/VBoxContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 464.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "+"

[node name="PerceptionStat" type="PanelContainer" parent="PanelContainer/TabContainer/PlayerStats"]
margin_top = 268.0
margin_right = 478.0
margin_bottom = 343.0
rect_min_size = Vector2( 0, 75 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/TabContainer/PlayerStats/PerceptionStat"]
margin_left = 7.0
margin_top = 7.0
margin_right = 471.0
margin_bottom = 68.0

[node name="NameLabel" type="Label" parent="PanelContainer/TabContainer/PlayerStats/PerceptionStat/VBoxContainer"]
margin_right = 464.0
margin_bottom = 14.0
text = "PERCEPTION"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/TabContainer/PlayerStats/PerceptionStat/VBoxContainer"]
margin_top = 18.0
margin_right = 464.0
margin_bottom = 61.0
size_flags_vertical = 3

[node name="MinusButton" type="Button" parent="PanelContainer/TabContainer/PlayerStats/PerceptionStat/VBoxContainer/HBoxContainer"]
margin_right = 152.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "-"

[node name="CurrAmountLabel" type="Label" parent="PanelContainer/TabContainer/PlayerStats/PerceptionStat/VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_top = 14.0
margin_right = 308.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "1"
align = 1
valign = 1

[node name="AddButton" type="Button" parent="PanelContainer/TabContainer/PlayerStats/PerceptionStat/VBoxContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 464.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "+"

[node name="ToughnessStat" type="PanelContainer" parent="PanelContainer/TabContainer/PlayerStats"]
margin_top = 347.0
margin_right = 478.0
margin_bottom = 422.0
rect_min_size = Vector2( 0, 75 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/TabContainer/PlayerStats/ToughnessStat"]
margin_left = 7.0
margin_top = 7.0
margin_right = 471.0
margin_bottom = 68.0

[node name="NameLabel" type="Label" parent="PanelContainer/TabContainer/PlayerStats/ToughnessStat/VBoxContainer"]
margin_right = 464.0
margin_bottom = 14.0
text = "TOUGHNESS"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/TabContainer/PlayerStats/ToughnessStat/VBoxContainer"]
margin_top = 18.0
margin_right = 464.0
margin_bottom = 61.0
size_flags_vertical = 3

[node name="MinusButton" type="Button" parent="PanelContainer/TabContainer/PlayerStats/ToughnessStat/VBoxContainer/HBoxContainer"]
margin_right = 152.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "-"

[node name="CurrAmountLabel" type="Label" parent="PanelContainer/TabContainer/PlayerStats/ToughnessStat/VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_top = 14.0
margin_right = 308.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "0"
align = 1
valign = 1

[node name="AddButton" type="Button" parent="PanelContainer/TabContainer/PlayerStats/ToughnessStat/VBoxContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 464.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "+"

[node name="StartButton" type="Button" parent="PanelContainer/TabContainer/PlayerStats"]
margin_top = 426.0
margin_right = 478.0
margin_bottom = 476.0
rect_min_size = Vector2( 0, 50 )
text = "Spawn"

[node name="Occupations" type="PanelContainer" parent="PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/TabContainer/Occupations"]
margin_left = 7.0
margin_top = 7.0
margin_right = 471.0
margin_bottom = 443.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/TabContainer/Occupations/ScrollContainer"]
margin_right = 464.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="PanelContainer/TabContainer/PlayerStats/StrengthStat/VBoxContainer/HBoxContainer/MinusButton" to="." method="on_minus_stat" binds= [ 0 ]]
[connection signal="pressed" from="PanelContainer/TabContainer/PlayerStats/StrengthStat/VBoxContainer/HBoxContainer/AddButton" to="." method="on_add_stat" binds= [ 0 ]]
[connection signal="pressed" from="PanelContainer/TabContainer/PlayerStats/PerceptionStat/VBoxContainer/HBoxContainer/MinusButton" to="." method="on_minus_stat" binds= [ 1 ]]
[connection signal="pressed" from="PanelContainer/TabContainer/PlayerStats/PerceptionStat/VBoxContainer/HBoxContainer/AddButton" to="." method="on_add_stat" binds= [ 1 ]]
[connection signal="pressed" from="PanelContainer/TabContainer/PlayerStats/ToughnessStat/VBoxContainer/HBoxContainer/MinusButton" to="." method="on_minus_stat" binds= [ 2 ]]
[connection signal="pressed" from="PanelContainer/TabContainer/PlayerStats/ToughnessStat/VBoxContainer/HBoxContainer/AddButton" to="." method="on_add_stat" binds= [ 2 ]]
[connection signal="pressed" from="PanelContainer/TabContainer/PlayerStats/StartButton" to="." method="spawn_player"]
